--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  pulltheflower
+domain: pulltheflower.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://pulltheflower.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+baseurl: /vincent-blog/  
 
 # Build settings
 theme: minima
